Fri Nov  9 11:25:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Doxygen improvements

Fri Nov  9 11:06:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux-common.h:
          Newer glibc versions don't need ACE_HAS_NONCONST_SETRLIMIT anymore.
          Thanks to Thomas Girard <thomas dot g dot girard at free dot fr>
          for reporting this. This fixes bugzilla 3136

Fri Nov  9 09:46:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Some PPC's don't have log2 in kernel mode

Fri Nov  9 09:37:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.{h,cpp,inl}:
        * ace/Thread_Manager.cpp:
          Changed ACE_hthread_t to an int for VxWorks. This makes the core of
          ACE cleaner and more stable on VxWorks. At this moment you can't give
          a Task a name, but we will extend the thread creation functions
          with an additional char* in a next iteration. That way you can use
          task names also when using pthread on vxworks. See also bugzilla 3131

        * tests/Conn_Test.cpp:
        * tests/Thread_Manager_Test.cpp:
          Disable task name setting, will be enabled again when the spawn
          methods are extended

Fri Nov  9 08:58:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Base.inl:
          Fixed incorrect define. This fixes bugzilla 3139. Thanks to
          Thomas Girard <thomas dot g dot girard at free dot fr>

        * ace/Dynamic_Service_Base.{h,cpp}:
          Reduced number of methods by using default argument values

        * ace/Object_Manager.{h,cpp}:
        * ace/Service_Config.cpp:
          The Service Configurator depends on the availability of TSS. When
          TSS emulation is enabled, that emulation needs to be initialized