@@ -19,11 +19,11 @@ ACE_Task_Base::ACE_Task_Base (ACE_Thread_Manager *thr_man)
     thr_mgr_ (thr_man),
     flags_ (0),
     grp_id_ (-1)
-#if !defined (ACE_MVS)
+#if !(defined (ACE_MVS) || defined(__TANDEM))
     ,last_thread_id_ (0)
 #endif /* !defined (ACE_MVS) */
 {
-#if defined (ACE_MVS)
+#if (defined (ACE_MVS) || defined(__TANDEM))
    ACE_OS::memset( &this->last_thread_id_, '\0', sizeof( this->last_thread_id_ ));
 #endif /* defined (ACE_MVS) */
 }
@@ -196,7 +196,7 @@ ACE_Task_Base::activate (long flags,
   if (this->grp_id_ == -1)
     this->grp_id_ = grp_spawned;
 
-#if defined (ACE_MVS)
+#if defined (ACE_MVS) || defined(__TANDEM)
   ACE_OS::memcpy( &this->last_thread_id_, '\0', sizeof(this->last_thread_id_));
 #else
   this->last_thread_id_ = 0;    // Reset to prevent inadvertant match on ID
