@@ -91,7 +91,8 @@ typedef double ACE_timer_t;
    typedef __int64  ACE_LOFF_T;
 #elif (defined (ACE_VXWORKS) && (ACE_VXWORKS <= 0x650)) || \
   defined (ACE_LYNXOS_MAJOR) || \
-  (defined (ACE_OPENVMS) && !defined (_LARGEFILE))
+  (defined (ACE_OPENVMS) && !defined (_LARGEFILE)) || \
+  defined (__TANDEM)
    typedef long long ACE_LOFF_T;
 #else
    typedef loff_t ACE_LOFF_T;
